# dotfiles

./: .gitmodules  CMakeLists.txt  compile  custom_rosconsole.conf  gitconfig  hosts  ideavimrc  ilife_ldscript.lds  install.conf.yaml  linux-tools.md  map  package.xml  pp  pp.puml  run.sh  run.sh2  tmux.conf  vimrc  zshrc
audio/: 语音序号.docx
config/: mapper_params.yaml
doc/: Function_Requirement.md  Update_Log.md
docker/: Dockerfile  run.sh  rviz.sh
include/: Angles.h  BoundingBox.h  accelerator.h  action.hpp  appointment.h  arch.hpp  battery.h  beep.h  beeper.h  brush.h  bumper.h  charge.hpp  charger.h  charger.hpp  clean_mode.h  clean_mode.hpp  clean_state.h  clean_timer.h  cliff.h  common.h  config.h  control.h  controller.h  core_move.h  crc8.h  curve_move.h  debug.h  des.h  dev.h  error.h  event_action.h  event_manager.h  global.h  go_home.hpp  gotocharger.hpp  governor.hpp  gyro.h  idle.h  infrared_display.hpp  key.h  (+69 more)
include/action_new/: action_new.hpp  action_open_gyro_new.hpp
include/clean_mode_new/: clean_mode_navigation_new.hpp  clean_mode_new.hpp
include/figures/: segment.h
include/mode/: mode.hpp  mode_sleep.hpp
include/obstacle_detector/: CircleObstacle.h  Obstacles.h  SegmentObstacle.h
include/path_algorithm/: path_algorithm.h
include/protocol/: wifi_map_protocol.h
include/utilities/: figure_fitting.h  math_utilities.h
include/wifi/: dev.h  msg.h  packet.h  rx.h  rx.tcc  tx.h  util.h  wifi.h
include/wifi/cloud/: accumulated_work_time_handler.h  consumable_handler.h  realtime_map_handler.h
launch/: cartographer_slam.launch  gmapping.launch  karto_slam.launch  ldslidar.launch  median_filter_5_example.launch  mybot.launch  obstacle_detector.launch  pp.launch  robot_state_publisher.launch  robotbase.launch  rplidar.launch  tf_laser2base.launch
lib/pp/: pp  syscheck
lib/rplidar_ros/: rplidarNode  rplidarNodeClient
lidar_checking/: back  front
msg/: __init__.py  _robotmode.py  _slam_angle_offset.py  _x900sensor.py  periph.msg  peripheral.msg  robotmode.msg  sensor.msg  slam_angle_offset.msg  x900ctrl.msg  x900sensor.msg
script/: 99-add-usb.rules  99-remove-usb.rules  mountusb.sh  pp  restart_wifi.sh  robot_base.py  robot_base_link.py  start_pp.sh  unmountusb.sh
src/: appointment.cpp  charge.cpp  charger.cpp  clean_mode.cpp  clean_state.cpp  common.cpp  control.cpp  core_move.cpp  crc8.cpp  curve_move.cpp  debug.cpp  des.cpp  error.cpp  event_manager.cpp  global.cpp  glogal.cpp  go_home.cpp  gotocharger.cpp  gyro.cpp  idle.cpp  laser.cpp  log.cpp  main.cpp  map.cpp  mathematics.cpp  motion_controler.cpp  motion_manage.cpp  move_type.cpp  movement.cpp  obstacle_detector.cpp  odom.cpp  path_planning.cpp  pose.cpp  r16_board_test.cpp  random_runing.cpp  random_runing.cpp~  random_running.cpp  regulator.cpp  regulator_base.cpp  remote_mode.cpp  (+22 more)
src/action/: action.cpp  action_align.cpp  action_back_from_charger.cpp  action_charge.cpp  action_check_bumper.cpp  action_check_vacuum.cpp  action_check_water_tank.cpp  action_clean.cpp  action_idle.cpp  action_life_check.cpp  action_open_gyro.cpp  action_open_gyro_and_lidar.cpp  action_open_lidar.cpp  action_open_slam.cpp  action_pause.cpp  action_r16_test.cpp  action_sleep.cpp  action_turn_for_charger.cpp  charge.cpp  idle.cpp  remote_mode.cpp  sleep.cpp
src/action/move_type/: action_follow_wall.cpp  action_go_charger.cpp  action_linear.cpp  follow_point.cpp  move_type.cpp  move_type_bumper_hit_test.cpp  move_type_desk_test.cpp  move_type_follow_wall.cpp  move_type_go_to_charger.cpp  move_type_gyro_test.cpp  move_type_linear.cpp  move_type_remote.cpp  movement_follow_point.cpp
src/action/movement/: movement.cpp  movement_back.cpp  movement_back_new.cpp  movement_base.cpp  movement_direct_go.cpp  movement_fall_wall.cpp  movement_fall_wall_new.cpp  movement_forward.cpp  movement_forward_new.cpp  movement_go_charger.cpp  movement_go_charger_new.cpp  movement_new.cpp  movement_self_check.cpp  movement_stay.cpp  movement_turn.cpp  movement_turn_for_charger.cpp  movement_turn_new.cpp
src/action_new/: action_new.cpp  action_open_gyro_new.cpp
src/clean_mode/: clean_mode.cpp  exploration.cpp  navigation_clean.cpp  spot_clean.cpp  wall_follow_clean.cpp
src/clean_mode_new/: clean_mode_navigation_new.cpp  clean_mode_new.cpp
src/cloud/: consumable_handler.cpp
src/dev/: accelerator.cpp  appointment.cpp  battery.cpp  beep.cpp  beeper.cpp  brush.cpp  bumper.cpp  charger.cpp  clean_timer.cpp  cliff.cpp  controller.cpp  gyro.cpp  infrared_display.cpp  key.cpp  key_led.cpp  laser.cpp  led.cpp  lidar.cpp  obs.cpp  omni.cpp  planer.cpp  rcon.cpp  remote.cpp  robot_timer.cpp  speaker.cpp  tilt.cpp  vacuum.cpp  wall_follow.cpp  water_tank.cpp  wav.cpp  wheel.cpp  wifi.cpp  wifi_led.cpp
src/dev/wifi/: dev.cpp  msg.cpp  packet.cpp  rx.cpp  tx.cpp  wifi.cpp
src/mode/: clean_mode.cpp  clean_mode_desk_test.cpp  clean_mode_exploration.cpp  clean_mode_follow_wall.cpp  clean_mode_navigation.cpp  clean_mode_spot.cpp  clean_mode_test.cpp  mode.cpp  mode_charge.cpp  mode_exploration.cpp  mode_go_home.cpp.cpp  mode_go_to_charger.cpp  mode_idle.cpp  mode_ilde.cpp  mode_remote.cpp  mode_sleep.cpp
src/mode/state/: state.cpp  state_charge.cpp  state_clean.cpp  state_clean_follow_wall.cpp  state_clean_navigation.cpp  state_desk_test.cpp  state_exception_resume.cpp  state_exploration.cpp  state_follow_wall.cpp  state_go_charger.cpp  state_go_home_point.cpp  state_init.cpp  state_pause.cpp  state_resume_low_battery_charge.cpp  state_self_check.cpp  (+5 more)
src/path_algorithm/: move_type_plan.cpp  path_algorithm.cpp  path_algorithm_follow_wall.cpp  path_algorithm_go_home.cpp  path_algorithm_navigation_clean.cpp  path_algorithm_spot.cpp  shortest_path_algorithm.cpp
src/path_alogorithm/: path_alogorithm.cpp
src/protocol/: wifi_map_protocol.cpp  wifi_map_protocol.h
src/speed_governor/: speed_governor.cpp
src/wifi/: msg.cpp  util.cpp
srv/: SetLidar.srv
ssh/: authorized_keys  id_rsa  id_rsa.pub  known_hosts  known_hosts.old  known_hosts.pub
test/: angle_test.cpp  test_path_update_cell.cpp
urdf/: aicleanrobot.urdf
(+34 files in other folders)
