<?xml version="1.0"?>
<package>
	<name>pp</name>
	<version>0.0.1</version>
	<description>PathPlanning for X900</description>

	<maintainer email="patrickchau@china-ilife.com">PathPlanning for X900 Maintainer</maintainer>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>message_generation</build_depend>
	<build_depend>rosconsole</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>periph_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>std_srvs</build_depend>
	<build_depend>tf</build_depend>

	<run_depend>message_runtime</run_depend>
	<run_depend>periph_msgs</run_depend>
	<run_depend>rosconsole</run_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>std_srvs</run_depend>
	<run_depend>tf</run_depend>

</package>
